fix greyTitles so they don't widen the body on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,13 @@
   font-size: 4em;
   line-height: 1em;
   top: 0; }
+  @media screen and (max-width: 736px) {
+    .page-casestudy-styling .greytitles {
+      font-size: 3em; } }
+  @media screen and (max-width: 480px) {
+    .page-casestudy-styling .greytitles {
+      font-size: 2.5em;
+      margin: -15px auto; } }
 
 .page-casestudy-styling .cs-box-row {
   flex-wrap: nowrap; }
